# learn_note

deeplearn/base/: 从线性系统到卷积神经网络.ipynb  搭建一个感知机.ipynb
deeplearn/target_detect/: yolov1.ipynb  yolov1.md  yolov2_3.ipynb
docker/: 入门.md
g2o/: README.md
grpc/: README.md
grpc/helloworld/: .gitignore  CMakeLists.txt  vcpkg.json
grpc/helloworld/src/: CMakeLists.txt  client.cxx  file_transfer.proto  server.cxx  service.proto
pcl/: CMakeLists.txt
pcl/src/: CMakeLists.txt  kdtree_search.cpp
redis源码分析/: README.md  object.md  redis启动.md  sentinel.md  事件机制.md  执行命令  看门狗.md
ros/: README.md
ros/doc/: PointCloud2解析.md
ros/learn/src/example_cpp/: CMakeLists.txt  package.xml
ros/learn/src/example_cpp/src/: node1.cpp  node2.cpp  pointCloud.cpp
ros/learn/src/example_ros2_interfaces/: CMakeLists.txt  package.xml
ros/learn/src/example_ros2_interfaces/msg/: SelfTestMsg.msg
ros/learn/src/village_wang/: CMakeLists.txt  package.xml
性能/: 性能优化 4326d35e9f5742a2a50cefb5151239ee.md
